Towards a1 1.0.0; DELETE, no vector:
* Implement instance delete
* Moves away from the status vector and now aggregates statuses
* Pop through a1s mailbox "3x as often"; on all 3 kinds of instance GET since all such calls want the latest information
* Misc cleanups in controller
* Add rmr-version.yaml for CICD jobs
